--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
 
-    <meta property="og:title" content="hic et nunc" />
+    <meta property="og:title" content="then and now" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hicetnunc.xyz" />
+    <meta property="og:url" content="https://thenandnow.dev" />
     <meta property="og:image" content="/HEN_avatar.png" />
     <meta property="og:description" content="decentralized digital assets" />
     <meta name="twitter:card" content="summary_large_image" />
