update about page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="decentralized digital assets" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@hicetnunc2000" />
-    <meta name="twitter:title" content="hic et nunc" />
+    <meta name="twitter:title" content="then and now" />
     <meta name="twitter:description" content="decentralized digital assets" />
     <meta name="twitter:image" content="/HEN_avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
